fixed ajax type

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,6 +20,7 @@ block content
 
       $.ajax({
         url: 'https://fcc-file-metadata-nr.herokuapp.com/fileanalyse/',
+        type: 'POST',
         data: fd,
         processData: false,
         contentType: false,
